# aps490_retraction_fsm

./: .gitignore  Cargo.toml  README.md
MB1180/: MB1180-PcbDoc.kicad_pcb  MB1180-SCHLIB-cache.lib  MB1180-SCHLIB.sch  MB1180-SchDoc-cache.lib  MB1180-SchDoc.kicad_sch  MB1180-SchDoc.sch  MB1180.kicad_pro  MB1180.kicad_sch  MCU_32-SchDoc-cache.lib  MCU_32-SchDoc-rescue.kicad_sym  MCU_32-SchDoc.kicad_sch  MCU_32-SchDoc.sch  Pads.html  Pads.txt  ST_LINK_V2-1-SCHDOC-cache.lib  ST_LINK_V2-1-SCHDOC-rescue.kicad_sym  ST_LINK_V2-1-SCHDOC.kicad_sch  ST_LINK_V2-1-SCHDOC.sch  altium2kicad-conversionlog.txt  sym-lib-table  wrlshapes.kicad_pcb
MB1180/MB1180-PcbDoc/Root Entry/Arcs6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/Board6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/Classes6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/ComponentBodies6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/Components6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/Dimensions6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/FileVersionInfo/: Data.dat.txt  Data.txt
MB1180/MB1180-PcbDoc/Root Entry/Fills6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/Models/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/Nets6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/Polygons6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/Regions6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/Rules6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/ShapeBasedComponentBodies6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/Texts6/: Texts.txt
MB1180/MB1180-PcbDoc/Root Entry/Tracks6/: Data.dat.txt
MB1180/MB1180-PcbDoc/Root Entry/Vias6/: Data.dat.txt
MB1180/MB1180-SCHLIB/Root Entry/: FileHeader.dat.txt
MB1180/MB1180-SchDoc/Root Entry/: FileHeader.dat.txt
MB1180/MB1180.pretty/: 0603C.kicad_mod  0603D_G.kicad_mod  0603D_R.kicad_mod  0603L.kicad_mod  0603R.kicad_mod  DFN6_0R95_3x3_TP.kicad_mod  HDR_1x15_2R54_V_F.kicad_mod  HDR_1x2_1R27_R_M.kicad_mod  HDR_1x2_1R27_V_M.kicad_mod  HDR_1x5_2R54_V_M.kicad_mod  HSMF-A201.kicad_mod  LQFP32_0R5_7x7.kicad_mod  LQFP48_0R5_7x7.kicad_mod  Molex_1050170001.kicad_mod  QFN32_0R5_5.3x5.3.kicad_mod  SB_0603.kicad_mod  SMA.kicad_mod  SO-8.kicad_mod  SOD-323.kicad_mod  SOT-223.kicad_mod  SOT23-3.kicad_mod  SOT23-5L.kicad_mod  ST_LOGO_5mm.kicad_mod  SW2_5R6_5R5x3R1.kicad_mod  TAN_A.kicad_mod  TAN_B.kicad_mod  XTAL_2SM_3R2X1R5.kicad_mod  XTAL_2SM_3R2x2R5.kicad_mod
MB1180/MCU_32-SchDoc/Root Entry/: FileHeader.dat.txt
MB1180/ST_LINK_V2-1-SCHDOC/Root Entry/: FileHeader.dat.txt
SparkFun_Lipo_Charger_Basic-microUSB/: SparkFun_Lipo_Charger_Basic-microUSB-eagle-import.kicad_sym  SparkFun_Lipo_Charger_Basic-microUSB.kicad_pcb  SparkFun_Lipo_Charger_Basic-microUSB.kicad_prl  SparkFun_Lipo_Charger_Basic-microUSB.kicad_pro  SparkFun_Lipo_Charger_Basic-microUSB.kicad_sch  fp-lib-table  sym-lib-table
SparkFun_Lipo_Charger_Basic-microUSB/SparkFun_Lipo_Charger_Basic-microUSB.pretty/: 0603-CAP.kicad_mod  0603-RES.kicad_mod  1X02.kicad_mod  AXIAL-0.1EZ.kicad_mod  CREATIVE_COMMONS.kicad_mod  FIDUCIAL-1X2.kicad_mod  JST-2-SMD.kicad_mod  LED-0603.kicad_mod  OSHW-LOGO-S.kicad_mod  SFE_LOGO_FLAME_.1.kicad_mod  SOT23-5.kicad_mod  STAND-OFF.kicad_mod  USB-AB-MICRO-SMD_V03.kicad_mod
aps490_detection/: aps490_detection.kicad_pro  aps490_detection.kicad_sch  detection_circuit.kicad_sch  sym-lib-table
concept/: Cargo.toml
concept/retract_fsm_transition/: Cargo.toml
concept/src/: main.rs  sensors.rs
concept/src/fsm/: states.rs
detection-research/: Saw-Detection-Research.md
retract_fsm_transition/: Cargo.toml
retract_fsm_transition/src/: lib.rs
src/: buffer.rs  components.rs  fsm.rs  lib.rs  main.rs  sensors.rs  states.rs
src/fsm/: mod.rs  states.rs
