[workspace]
members = ["retract_fsm_transition"]

[workspace.package]
authors = ["Cameron Rodriguez <dev@camrod.me>"]
readme = "README.md"
repository = "https://github.com/cam-rod/aps490_retraction_fsm"
license = "GPL-2.0-only"

[package]
name = "aps490_retraction_fsm"
version = "0.1.0"
authors.workspace = true
description = "FSM for saw MCU"
edition = "2021"
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retract_fsm_transition = { path = "retract_fsm_transition" }