[workspace]
members = ["concept"]

[workspace.package]
authors = ["Cameron Rodriguez <dev@camrod.me>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/cam-rod/aps490_retraction_fsm"
license = "GPL-2.0-only"

[package]
name = "aps490_retraction_fsm"
version = "0.1.0"
authors.workspace = true
description = "FSM for saw MCU"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true