[workspace]
members = ["concept"]

[workspace.package]
authors = ["Cameron Rodriguez <dev@camrod.me>"]
edition = "2021"
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/cam-rod/aps490_retraction_fsm"

[package]
name = "aps490_retraction_fsm"
version = "0.1.0"
authors.workspace = true
description = "FSM for saw MCU"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.1.2"
embedded-hal = "1.0.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version="0.10", features=["rt", "critical-section-impl", "defmt"] }
rp2040-boot2 = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
