[package]
name = "retract_fsm_transition"
version = "0.1.0"
authors.workspace = true
description = "Macros for saw FSM"
edition = "2021"
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = { features = ["full"], version = "2.0.48" }

[lib]
proc-macro = true